# brainfuchs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  brainfuchs.cabal
.github/workflows/: pre-release.yml  release.yml  tests.yml
app/: Compiler.hs  Main.hs
compiler/: ARCHITECTURE.md  README.md
compiler/src/: AST.hs  Assembler.hs  CodeGen.hs  Parser.hs
examples/: README.md  antesuc.bf  contador.bf  explicacao.md  moveponteiro.bf  repetidor.bf  saudacao.bf  soma.bf  tab.bf  zero.bf
examples/compiler/: README.md
interpreter/: ARCHITECTURE.md  MODULE_SPECIFICATIONS.md  Parser.hs  README.md
interpreter/Brainfuck/: Evaluator.hs  Main.hs  Parser.hs  Types.hs
interpreter/src/: Main.hs
interpreter/src/Brainfuck/: Evaluator.hs  Parser.hs  Types.hs
tests/: AssemblerSpec.hs  AstProps.hs  CodeGenSpec.hs  EvaluatorProps.hs  GenBalanced.hs  ParserProps.hs  README.md  Spec.hs
